--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
   flutter_screenutil: ^5.9.3
+  audioplayers: ^6.5.0
 
 dev_dependencies:
   flutter_test:
